k8s/test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: custom-proxy-config
  addresses:
   - type: IPAddress
     value: 2a01:4f8:c013:7b8::1
   - type: IPAddress
     value: 49.13.58.9
  listeners:
    - name: http
      protocol: HTTP
      port: 81
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 444
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: erebe-eu-tls
          namespace: default
      allowedRoutes:
        namespaces:
          from: All
    - name: tls-passthrough
      protocol: TLS
      hostname: ws.erebe.eu
      port: 444
      tls:
        mode: Passthrough
      allowedRoutes:
        kinds:
          - kind: TLSRoute
        namespaces:
          from: All
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: response-compression
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy
  #proxyProtocol:
  #  version: "V2"
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
